@@ -1038,7 +1038,8 @@ send_packet(pcap_t *pcap_handle, host_entry *he,
     * Check that the host is live. Complain if not.
     */
    if (!he->live) {
-      warn_msg("***\tsend_packet called on non-live host: SHOULDN'T HAPPEN");
+      warn_msg("WARNING: Send attempt to inactive host: SHOULDN'T HAPPEN\n"
+               "         Please report to github.com/royhills/arp-scan/issues");
       return 0;
    }
    /*
@@ -1677,8 +1678,8 @@ remove_host(host_entry **he) {
       if (*he == *cursor)
          advance_cursor();
    } else {
-      if (verbose > 1)
-         warn_msg("***\tremove_host called on non-live host: SHOULDN'T HAPPEN");
+      warn_msg("WARNING: Attempt to remove inactive host: SHOULDN'T HAPPEN\n"
+               "         Please report to github.com/royhills/arp-scan/issues");
    }
 }
 
